# appstore-automation

./: README.md  pyproject.toml  requirements.txt
src/: accounts.xlsx  main.py
src/automation/: README.md  base_driver.py  workflows.py
src/automation/pages/: amazon_developer_registration.py  amazon_homepage.py  amazon_profile_page.py  amazon_signup_page.py  base_page.py
src/config/: .env.example  settings.py
src/controllers/: README.md
src/exceptions/: base_exceptions.py  captcha_exceptions.py  tempmail_exceptions.py  virtual_number_exceptions.py
src/experiments/: Untitled.ipynb  brightdata.ipynb  outlook.ipynb
src/integrations/: captcha_service.py  proxy_service.py  tempmail_service.py  virtual_number_service.py
src/integrations/nopecha/: background.js  eventhook.js  manifest.json  popup.js
src/integrations/nopecha-auto/: manifest.json
src/integrations/nopecha/captcha/: awscaptcha.js  funcaptcha.js  hcaptcha.js  perimeterx.js  recaptcha.js  textcaptcha.js  turnstile.js
src/integrations/nopecha/eventhook/: loader.js
src/integrations/nopecha/pages/: funcaptcha-demo.js  integrate.js  setup.js
src/logs/: README.md
src/models/: README.md
src/ui/: README.md  main_window.py
src/utils/: logger.py  utils.py
